Adjust Player page

--- a/player/index.html
+++ b/player/index.html
@@ -96,8 +96,8 @@
         <img src="icon.png" />
 
         <div>
-            <h1>Viki</h1>
-            <h2>Version: 5.6</h2>
+            <h1>Viki Player</h1>
+            <h2>Version: 0.2.0</h2>
         </div>
         <a href="itms-services://?action=download-manifest&url=https://thomasjoulin.github.io/player/VikiPlayer.plist">Install</a>
 </body>
