Adjust Player page

--- a/player/index.html
+++ b/player/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <title>Viki</title>
+        <title>Viki Player</title>
 
         <link rel="stylesheet" type="text/css" href="//thomasjoulin.github.io/viki/css/style.css" media="screen">
         <link rel="stylesheet" type="text/css" href="//thomasjoulin.github.io/viki/ios.css" media="screen">
