--- a/viki/index.html
+++ b/viki/index.html
@@ -80,7 +80,7 @@
 
             a.active
             {
-                background-color: #0c9bff;
+                background-color: #64bfff;
             }
 
             img
